<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.post_detail.user.UserDetailsFragment">

    <!-- Label fields -->
    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_author_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTitle" />

    <TextView
        android:id="@+id/labelUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username"
        app:layout_constraintStart_toStartOf="@+id/labelName"
        app:layout_constraintTop_toBottomOf="@+id/labelName" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        app:layout_constraintStart_toStartOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelUserName" />

    <TextView
        android:id="@+id/labelAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_address"
        app:layout_constraintStart_toStartOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/labelZipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_zip_code"
        app:layout_constraintStart_toStartOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelAddress" />

    <TextView
        android:id="@+id/labelPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone"
        app:layout_constraintStart_toStartOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelZipCode" />

    <TextView
        android:id="@+id/labelWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_website"
        app:layout_constraintStart_toStartOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelZipCode" />

    <TextView
        android:id="@+id/labelCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_company"
        app:layout_constraintStart_toStartOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelWebsite" />

    <!-- User information fields -->
    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelUserName"
        app:layout_constraintTop_toBottomOf="@+id/labelTitle"
        tools:text="Leanne Graham" />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:text="Bret" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:text="Sincere@april.biz" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:text="Gwenborough, Kulas Light, Apt. 556" />

    <TextView
        android:id="@+id/zipCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/address"
        tools:text="92998-3874" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/zipCode"
        tools:text="1-770-736-8031 x56442" />

    <TextView
        android:id="@+id/website"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/phone"
        tools:text="hildegard.org" />

    <TextView
        android:id="@+id/company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/website"
        tools:text="Romaguera-Crona" />

</androidx.constraintlayout.widget.ConstraintLayout>